feat(#9) implemented the intrfaces also fiex yml file a bit the pcs section
