# api/src/main/java/com/example/computershop/controller/PcController.java
@@ -1,44 +1,47 @@
 package com.example.computershop.controller;
 
-import com.example.computershop.model.dto.PcDto;
 import com.example.computershop.service.PcService;
+import com.example.specs.generated.api.PcControllerApi;
+import com.example.specs.generated.model.PcDto;
 import jakarta.validation.Valid;
 import lombok.RequiredArgsConstructor;
+import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
 @RequiredArgsConstructor
 @RestController
 @RequestMapping("/admin/pcs")
-public class PcController {
+public class PcController implements PcControllerApi {
     private final PcService pcService;
 
 
     @GetMapping("/all")
-    public List<PcDto> getPcs(){
-        return pcService.getPcs();
+    public ResponseEntity<List<com.example.specs.generated.model.PcDto>> getPcs(){
+        return ResponseEntity.ok(pcService.getPcs());
     }
 
     @GetMapping
-    public PcDto getPc(@RequestParam Long code){
-        return pcService.getPc(code);
+    public ResponseEntity<com.example.specs.generated.model.PcDto> getPc(@RequestParam Long code){
+        return ResponseEntity.ok(pcService.getPc(code));
     }
 
 
     @PostMapping()
-    public PcDto insertIntoPc(@Valid @RequestBody PcDto pcDto) {
-        return pcService.save(pcDto);
+    public ResponseEntity<PcDto> insertIntoPc(@Valid @RequestBody PcDto pcDto) {
+        return ResponseEntity.ok(pcService.save(pcDto));
     }
 
     @PatchMapping("/{code}")
-    public PcDto patchPcPartially(@PathVariable Long code, @Valid @RequestBody PcDto pcDto) {
-        return pcService.updatePcPartially(code, pcDto);
+    public ResponseEntity<PcDto> patchPcPartially(@PathVariable Long code, @Valid @RequestBody PcDto pcDto) {
+        return ResponseEntity.ok(pcService.updatePcPartially(code, pcDto));
     }
 
     @DeleteMapping("/{code}")
-    public void deleteFromPc(@PathVariable("code") Long code) {
+    public ResponseEntity<Void> deleteFromPc(@PathVariable("code") Long code) {
         pcService.delete(code);
 
+        return null;
     }
 
 //    @GetMapping("/filter")
